--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
   margin: 0;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 form {
   width: 400px;
